update styles for messages, add date for messages

--- a/src/app/drivers/messages/messages.html
+++ b/src/app/drivers/messages/messages.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
-    <div class="col-sm-3 driver-name">Driver: George Clooney</div>
-    <div class="col-sm-9 chat">
+    <div class="col-xs-3 driver-name">Driver: George Clooney</div>
+    <div class="col-xs-9 chat">
       <!-- messages -->
       <!--<li *ngFor="let message of messages">
         {{ message.message }}
@@ -13,7 +13,7 @@
     </div>
 </div>
     <div class="row">
-      <div class="col-sm-12">
+      <div class="col-xs-12">
         <form action="#" class="message-form" name="sendMessageForm">
           <textarea name="message" placeholder="Type your message here"></textarea>
           <div class="send-block">
