--- a/src/app/drivers/messages/message/message.scss
+++ b/src/app/drivers/messages/message/message.scss
@@ -1,54 +1,68 @@
-.message {
-  position: relative;
-  word-wrap: break-word;
-  display: block;
-  color: #000;
-  width: 300px;
-  min-height: 40px;
-  height: 5%;
-  margin: 20px;
-  padding: 10px;
-  border-radius: 5px;
+.message-container {
+  display: flex;
+  justify-content: space-between;
+  //flex-direction: row-reverse;
 }
 
-.left-triangle {
-  background: DodgerBlue;
-&:before {
-   content: "";
-   width: 0;
-   height: 0;
-   border-top: 0px solid transparent;
-   border-bottom: 20px solid transparent;
-   border-left: 20px solid DodgerBlue;
-   position: absolute;
-   right: -20px;
- }
-}
+  .message {
+      position: relative;
+      word-wrap: break-word;
+      display: flex;
+      flex-direction: column;
+      color: #000;
+      width: 30%;
+      min-height: 40px;
+      height: 5%;
+      margin: 15px;
+      padding: 10px;
+      border-radius: 5px;
+    }
+    .message:before{
+      content: "";
+      width: 0;
+      height: 0;
+      border-top: 0px solid transparent;
+      border-bottom: 20px solid transparent;
+      position: absolute;
+    }
 
-.right-triangle-system {
-  background: darkgrey;
-&:before {
-   content: "";
-   width: 0;
-   height: 0;
-   border-top: 0px solid transparent;
-   border-bottom: 20px solid transparent;
-   border-right: 20px solid darkgrey;
-   position: absolute;
-   left: -20px;
- }
-}
+    .message-carrier {
+      background: DodgerBlue;
+      &:before {
+        border-left: 20px solid DodgerBlue;
+        right: -20px;
+      }
+    }
 
-.left-triangle-user {
-  background: lightgreen;
-  &:before {
-    content: "";
-    width: 0;
-    height: 0;
-    border-top: 0px solid transparent;
-    border-bottom: 20px solid transparent;
-    border-left: 20px solid lightgreen;
-    position: absolute;
-    right: -20px;
+    .message-system {
+      background: darkgrey;
+      &:before {
+        border-right: 20px solid darkgrey;
+        left: -20px;
+      }
+    }
+
+    .message-user {
+      background: lightgreen;
+      &:before {
+        border-left: 20px solid lightgreen;
+        right: -20px;
+      }
+    }
+
+  .date {
+    position: relative;
+    display: flex;
+    align-content: center;
+    padding: 28px;
+    word-wrap: break-word;
+    width: 100px;
+    margin: 0 0 0 20px;
   }
+
+.container-left{
+  flex-direction: row;
+}
+.container-right{
+  flex-direction: row-reverse;
 }
