update message service for send messages

--- a/src/app/drivers/messages/messages.html
+++ b/src/app/drivers/messages/messages.html
@@ -21,7 +21,7 @@
             <p>Text</p>
             <p>App</p>
             <p>Email</p>
-            <button class="send-message" (click)="onEnter($event)">Send</button>
+            <button class="send-message" (click)="sendMessage()">Send</button>
           </div>
         </form>
       </div>
