minor style changes

--- a/src/app/drivers/messages/message/message.html
+++ b/src/app/drivers/messages/message/message.html
@@ -1,4 +1,4 @@
-<div class="message-container {{this.currentContainer}}">
+<div class="message-container {{this.currentClassContainer}}">
   <div class="date">{{message.date}}</div>
   <div class="message {{this.currentClass}}">{{message.message}}</div>
 </div>
