fix panes markup: remove border and add scroll to each pane

--- a/layout/assets/sass/panes.scss
+++ b/layout/assets/sass/panes.scss
@@ -50,11 +50,13 @@
 	flex-grow:1;
 	align-items: center;
   justify-content: center;
-	min-height:calc(100vh - 47px);
-	height:100%;
-	border:$defaultBorder;
+	height:calc(100vh - 44px);
+  overflow: scroll;
 	padding:0;
+		div{
+			color:#666;
+		}
 }
-.pane div{
-	color:#666;
+.pane-3{
+		align-items: flex-start;;
 }
