--- a/layout/assets/sass/header.scss
+++ b/layout/assets/sass/header.scss
@@ -7,29 +7,25 @@
 
 .search-container{
 	width:80%;
+	.search-form{
+		border:0;
+		height:45px;
+		line-height: 45px;
+		display:flex;
+		align-items:center;
+		flex-wrap:wrap;
+			span{
+				color:$defaultGreyColor;
+				padding:0 15px;
+			}
+			input {
+				border: none;
+				background: none;
+				color:#000;
+				width:80%;
+			}
+	}
 }
-
-.search-form{
-	border:0;
-	height:45px;
-	line-height: 45px;
-	display:flex;
-	align-items:center;
-	flex-wrap:wrap;
-}
-
-.search-form span{
-	color:$defaultGreyColor;
-	padding:0 15px;
-}
-
-.search-form input {
-	border: none;
-	background: none;
-	color:#000;
-	width:80%;
-}
-
 
 /*  header buttons container  */
 
@@ -39,16 +35,14 @@
 	flex-wrap:wrap;
 	align-items:center;
 	justify-content:flex-end;
-}
-
-.buttons-container a{
-	color:$defaultGreyColor;
-	font-size:1.5em;
-	margin:0 10px;
-	position:relative;
-}
-
-.buttons-container button{
-	border:0;
-	background:none;
+		a{
+			color:$defaultGreyColor;
+			font-size:1.5em;
+			margin:0 10px;
+			position:relative;
+		}
+		button{
+			border:0;
+			background:none;
+		}
 }
